# cppTemplate

./: CMakeLists.txt  README.md  main.cpp
src/: constants.hpp  exceptions.hpp  log.cpp  log.hpp  sqlite.cpp  sqlite.hpp  utils.cpp  utils.h  utils.hpp  version.rc
src/config/: settings.ini
src/databases/oracle/: oracle.cpp  oracle.hpp
src/databases/sqlite/: sqlite.cpp  sqlite.hpp
